# finetune-alpha-mcp

./: .gitignore  DEPLOYMENT.md  INTEGRATION_PLAN.md  README.md  pyproject.toml  requirements.txt  setup_env.sh  tool_schemas.py  train.py  train_alpha_functiongemma.ipynb
data/: synthetic_training.jsonl  tool_api_contract.json
scripts/: alpha_dispatch.py  generate_data.py  verify_model.py
