[project]
name = "finetune-alpha-mcp"
version = "1.0.0"
description = "Fine-tuning FunctionGemma on Alpha-MCP tool signatures"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "trl>=0.8.0",
    "peft>=0.10.0",
    "datasets>=2.18.0",
    "huggingface-hub>=0.22.0",
    "accelerate>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel",
    "jupyter",
]
